--- a/projeto/src/components/Task.css
+++ b/projeto/src/components/Task.css
@@ -17,7 +17,7 @@
   
 } */
 
-.remove-task-button{
+.remove-task-button, .see-task-details-button{
   background-color: #444;
   border: none;
   font-size: 24px;
